[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/variations/0/redsquare.png" type="Texture" id=6]
[ext_resource path="res://assets/img/variations/0/1200px-Red_Circle(small).svg.png" type="Texture" id=7]
[ext_resource path="res://scenes/variations/0/BounceBall.gd" type="Script" id=8]
[ext_resource path="res://assets/img/variations/0/seamless-vector-wood-texture-29518268.jpg" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 80.8051

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 127.066, 12.8004 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1015.0
margin_top = 797.0
margin_right = 1389.0
margin_bottom = 844.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="CircleTransform" type="Sprite" parent="."]
position = Vector2( 306.738, 299.061 )
scale = Vector2( 0.137332, 0.137332 )
texture = ExtResource( 7 )

[node name="redsquare" type="Sprite" parent="CircleTransform"]
position = Vector2( -6.56079, -9.27808 )
scale = Vector2( 4.13526, 4.13526 )
texture = ExtResource( 6 )

[node name="BounceBall" type="Node2D" parent="."]
position = Vector2( 615.966, 199.346 )
script = ExtResource( 8 )

[node name="RigidBody2D" type="RigidBody2D" parent="BounceBall"]
position = Vector2( 116.201, 103.878 )
gravity_scale = 3.49

[node name="1200px-Red_Circle(small)svg" type="Sprite" parent="BounceBall/RigidBody2D"]
position = Vector2( -0.723633, -1.61377 )
scale = Vector2( 0.133026, 0.133026 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceBall/RigidBody2D"]
position = Vector2( -2.15723, -1.74918 )
shape = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="BounceBall"]
position = Vector2( -17.6388, 187.728 )

[node name="seamless-vector-wood-texture-29518268" type="Sprite" parent="BounceBall/StaticBody2D"]
position = Vector2( 132.517, 71.7135 )
scale = Vector2( 1.58807, 0.160217 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceBall/StaticBody2D"]
position = Vector2( 132.188, 71.5815 )
shape = SubResource( 4 )

[node name="CircleFade" type="Sprite" parent="."]
position = Vector2( 1167.26, 306.059 )
scale = Vector2( 0.13124, 0.13124 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="."]
margin_left = 119.0
margin_top = 133.0
margin_right = 485.0
margin_bottom = 180.0
theme = ExtResource( 2 )
text = "MOSTRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 543.77
margin_top = 134.891
margin_right = 909.77
margin_bottom = 181.891
theme = ExtResource( 2 )
text = "MOSTRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 983.374
margin_top = 136.589
margin_right = 1349.37
margin_bottom = 183.589
theme = ExtResource( 2 )
text = "MOSTRAR"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
